Update docs for v0.9.4 (and revert development changes temporarily)

--- a/classes/_index_.brickpileds.html
+++ b/classes/_index_.brickpileds.html
@@ -109,7 +109,7 @@
 					<div class="tsd-signature tsd-kind-icon">blue<wbr>Color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/index.ts#L79">index.ts:79</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L85">index.ts:85</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -119,7 +119,7 @@
 					<div class="tsd-signature tsd-kind-icon">blue<wbr>Led1<span class="tsd-signature-symbol">:</span> <a href="_extras_.led.html" class="tsd-signature-type">LED</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/index.ts#L73">index.ts:73</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L79">index.ts:79</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -129,7 +129,7 @@
 					<div class="tsd-signature tsd-kind-icon">blue<wbr>Led2<span class="tsd-signature-symbol">:</span> <a href="_extras_.led.html" class="tsd-signature-type">LED</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/index.ts#L74">index.ts:74</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L80">index.ts:80</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -139,7 +139,7 @@
 					<div class="tsd-signature tsd-kind-icon">led1<span class="tsd-signature-symbol">:</span> <a href="_extras_.ledgroup.html" class="tsd-signature-type">LEDGroup</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/index.ts#L76">index.ts:76</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L82">index.ts:82</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -149,7 +149,7 @@
 					<div class="tsd-signature tsd-kind-icon">led2<span class="tsd-signature-symbol">:</span> <a href="_extras_.ledgroup.html" class="tsd-signature-type">LEDGroup</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/index.ts#L77">index.ts:77</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L83">index.ts:83</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -166,7 +166,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/index.ts#L81">index.ts:81</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L87">index.ts:87</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -237,10 +237,16 @@
 						<a href="_index_.ev3leds.html" class="tsd-kind-icon">Ev3<wbr>Leds</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="../modules/_index_.html#colorsensor" class="tsd-kind-icon">Color<wbr>Sensor</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#dcmotor" class="tsd-kind-icon">DCMotor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#device" class="tsd-kind-icon">Device</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="../modules/_index_.html#gyrosensor" class="tsd-kind-icon">Gyro<wbr>Sensor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#i2csensor" class="tsd-kind-icon">I2CSensor</a>
@@ -261,6 +267,9 @@
 						<a href="../modules/_index_.html#input_auto" class="tsd-kind-icon">INPUT_<wbr>AUTO</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="../modules/_index_.html#infraredsensor" class="tsd-kind-icon">Infrared<wbr>Sensor</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#led" class="tsd-kind-icon">LED</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
@@ -271,6 +280,9 @@
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#legoport" class="tsd-kind-icon">Lego<wbr>Port</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="../modules/_index_.html#lightsensor" class="tsd-kind-icon">Light<wbr>Sensor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#mediummotor" class="tsd-kind-icon">Medium<wbr>Motor</a>
@@ -306,7 +318,13 @@
 						<a href="../modules/_index_.html#servomotor" class="tsd-kind-icon">Servo<wbr>Motor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="../modules/_index_.html#soundsensor" class="tsd-kind-icon">Sound<wbr>Sensor</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#touchsensor" class="tsd-kind-icon">Touch<wbr>Sensor</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="../modules/_index_.html#ultrasonicsensor" class="tsd-kind-icon">Ultrasonic<wbr>Sensor</a>
 					</li>
 				</ul>
 			</nav>
