Update docs for 1.0 release

--- a/classes/_io_.xerror.html
+++ b/classes/_io_.xerror.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>XError | ev3dev-lang for Node.JS</title>
+	<title>XError | ev3dev-lang for Node.js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">ev3dev-lang for Node.JS</a>
+					<a href="../index.html" class="title">ev3dev-lang for Node.js</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -109,7 +109,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L7">io.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/io.ts#L16">io.ts:16</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -131,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L7">io.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/io.ts#L16">io.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -171,6 +171,12 @@
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="_io_.device.html" class="tsd-kind-icon">Device</a>
 					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported">
+						<a href="_io_.eventnotificationrequest.html" class="tsd-kind-icon">Event<wbr>Notification<wbr>Request</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="_io_.indexeddevice.html" class="tsd-kind-icon">Indexed<wbr>Device</a>
+					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="_io_.traceerror.html" class="tsd-kind-icon">Trace<wbr>Error</a>
 					</li>
@@ -189,6 +195,9 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported">
+						<a href="../modules/_io_.html#promise" class="tsd-kind-icon">Promise</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
