--- a/classes/_index_.brickpileds.html
+++ b/classes/_index_.brickpileds.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>BrickpiLeds | ev3dev-lang for Node.JS</title>
+	<title>BrickpiLeds | ev3dev-lang for Node.js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">ev3dev-lang for Node.JS</a>
+					<a href="../index.html" class="title">ev3dev-lang for Node.js</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -85,6 +85,7 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_index_.brickpileds.html#blackcolor" class="tsd-kind-icon">black<wbr>Color</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_index_.brickpileds.html#bluecolor" class="tsd-kind-icon">blue<wbr>Color</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_index_.brickpileds.html#blueled1" class="tsd-kind-icon">blue<wbr>Led1</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_index_.brickpileds.html#blueled2" class="tsd-kind-icon">blue<wbr>Led2</a></li>
@@ -104,12 +105,22 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-static">
+					<a name="blackcolor" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> black<wbr>Color</h3>
+					<div class="tsd-signature tsd-kind-icon">black<wbr>Color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L114">index.ts:114</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-static">
 					<a name="bluecolor" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> blue<wbr>Color</h3>
 					<div class="tsd-signature tsd-kind-icon">blue<wbr>Color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L85">index.ts:85</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L115">index.ts:115</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -119,7 +130,7 @@
 					<div class="tsd-signature tsd-kind-icon">blue<wbr>Led1<span class="tsd-signature-symbol">:</span> <a href="_extras_.led.html" class="tsd-signature-type">LED</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L79">index.ts:79</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L108">index.ts:108</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -129,7 +140,7 @@
 					<div class="tsd-signature tsd-kind-icon">blue<wbr>Led2<span class="tsd-signature-symbol">:</span> <a href="_extras_.led.html" class="tsd-signature-type">LED</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L80">index.ts:80</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L109">index.ts:109</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -139,7 +150,7 @@
 					<div class="tsd-signature tsd-kind-icon">led1<span class="tsd-signature-symbol">:</span> <a href="_extras_.ledgroup.html" class="tsd-signature-type">LEDGroup</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L82">index.ts:82</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L111">index.ts:111</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -149,7 +160,7 @@
 					<div class="tsd-signature tsd-kind-icon">led2<span class="tsd-signature-symbol">:</span> <a href="_extras_.ledgroup.html" class="tsd-signature-type">LEDGroup</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L83">index.ts:83</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L112">index.ts:112</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -166,7 +177,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L87">index.ts:87</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L117">index.ts:117</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -212,6 +223,9 @@
 						<a href="_index_.brickpileds.html" class="tsd-kind-icon">Brickpi<wbr>Leds</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
+								<a href="_index_.brickpileds.html#blackcolor" class="tsd-kind-icon">black<wbr>Color</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
 								<a href="_index_.brickpileds.html#bluecolor" class="tsd-kind-icon">blue<wbr>Color</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
@@ -240,9 +254,6 @@
 						<a href="../modules/_index_.html#colorsensor" class="tsd-kind-icon">Color<wbr>Sensor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/_index_.html#dcmotor" class="tsd-kind-icon">DCMotor</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#device" class="tsd-kind-icon">Device</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
@@ -267,6 +278,9 @@
 						<a href="../modules/_index_.html#input_auto" class="tsd-kind-icon">INPUT_<wbr>AUTO</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="../modules/_index_.html#indexeddevice" class="tsd-kind-icon">Indexed<wbr>Device</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#infraredsensor" class="tsd-kind-icon">Infrared<wbr>Sensor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
@@ -288,12 +302,6 @@
 						<a href="../modules/_index_.html#mediummotor" class="tsd-kind-icon">Medium<wbr>Motor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/_index_.html#motor" class="tsd-kind-icon">Motor</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/_index_.html#motorspeedsp" class="tsd-kind-icon">Motor<wbr>Speed<wbr>Sp</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#output_a" class="tsd-kind-icon">OUTPUT_<wbr>A</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
@@ -313,9 +321,6 @@
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#sensor" class="tsd-kind-icon">Sensor</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/_index_.html#servomotor" class="tsd-kind-icon">Servo<wbr>Motor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#soundsensor" class="tsd-kind-icon">Sound<wbr>Sensor</a>
