--- a/classes/_index_.ev3leds.html
+++ b/classes/_index_.ev3leds.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Ev3Leds | ev3dev-lang for Node.JS</title>
+	<title>Ev3Leds | ev3dev-lang for Node.js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">ev3dev-lang for Node.JS</a>
+					<a href="../index.html" class="title">ev3dev-lang for Node.js</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -86,6 +86,7 @@
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_index_.ev3leds.html#ambercolor" class="tsd-kind-icon">amber<wbr>Color</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_index_.ev3leds.html#blackcolor" class="tsd-kind-icon">black<wbr>Color</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_index_.ev3leds.html#greencolor" class="tsd-kind-icon">green<wbr>Color</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_index_.ev3leds.html#greenleft" class="tsd-kind-icon">green<wbr>Left</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_index_.ev3leds.html#greenright" class="tsd-kind-icon">green<wbr>Right</a></li>
@@ -115,7 +116,17 @@
 					<div class="tsd-signature tsd-kind-icon">amber<wbr>Color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L66">index.ts:66</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L95">index.ts:95</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-static">
+					<a name="blackcolor" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> black<wbr>Color</h3>
+					<div class="tsd-signature tsd-kind-icon">black<wbr>Color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L92">index.ts:92</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -125,7 +136,7 @@
 					<div class="tsd-signature tsd-kind-icon">green<wbr>Color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L65">index.ts:65</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L94">index.ts:94</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -135,7 +146,7 @@
 					<div class="tsd-signature tsd-kind-icon">green<wbr>Left<span class="tsd-signature-symbol">:</span> <a href="_extras_.led.html" class="tsd-signature-type">LED</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L58">index.ts:58</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L86">index.ts:86</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -145,7 +156,7 @@
 					<div class="tsd-signature tsd-kind-icon">green<wbr>Right<span class="tsd-signature-symbol">:</span> <a href="_extras_.led.html" class="tsd-signature-type">LED</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L59">index.ts:59</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L87">index.ts:87</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -155,7 +166,7 @@
 					<div class="tsd-signature tsd-kind-icon">left<span class="tsd-signature-symbol">:</span> <a href="_extras_.ledgroup.html" class="tsd-signature-type">LEDGroup</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L61">index.ts:61</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L89">index.ts:89</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -165,7 +176,7 @@
 					<div class="tsd-signature tsd-kind-icon">orange<wbr>Color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L67">index.ts:67</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L96">index.ts:96</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -175,7 +186,7 @@
 					<div class="tsd-signature tsd-kind-icon">red<wbr>Color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L64">index.ts:64</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L93">index.ts:93</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -185,7 +196,7 @@
 					<div class="tsd-signature tsd-kind-icon">red<wbr>Left<span class="tsd-signature-symbol">:</span> <a href="_extras_.led.html" class="tsd-signature-type">LED</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L56">index.ts:56</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L84">index.ts:84</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -195,7 +206,7 @@
 					<div class="tsd-signature tsd-kind-icon">red<wbr>Right<span class="tsd-signature-symbol">:</span> <a href="_extras_.led.html" class="tsd-signature-type">LED</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L57">index.ts:57</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L85">index.ts:85</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -205,7 +216,7 @@
 					<div class="tsd-signature tsd-kind-icon">right<span class="tsd-signature-symbol">:</span> <a href="_extras_.ledgroup.html" class="tsd-signature-type">LEDGroup</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L62">index.ts:62</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L90">index.ts:90</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -215,7 +226,7 @@
 					<div class="tsd-signature tsd-kind-icon">yellow<wbr>Color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L68">index.ts:68</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L97">index.ts:97</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -232,7 +243,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/index.ts#L70">index.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L99">index.ts:99</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -284,6 +295,9 @@
 								<a href="_index_.ev3leds.html#ambercolor" class="tsd-kind-icon">amber<wbr>Color</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
+								<a href="_index_.ev3leds.html#blackcolor" class="tsd-kind-icon">black<wbr>Color</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
 								<a href="_index_.ev3leds.html#greencolor" class="tsd-kind-icon">green<wbr>Color</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
@@ -324,9 +338,6 @@
 						<a href="../modules/_index_.html#colorsensor" class="tsd-kind-icon">Color<wbr>Sensor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/_index_.html#dcmotor" class="tsd-kind-icon">DCMotor</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#device" class="tsd-kind-icon">Device</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
@@ -351,6 +362,9 @@
 						<a href="../modules/_index_.html#input_auto" class="tsd-kind-icon">INPUT_<wbr>AUTO</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="../modules/_index_.html#indexeddevice" class="tsd-kind-icon">Indexed<wbr>Device</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#infraredsensor" class="tsd-kind-icon">Infrared<wbr>Sensor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
@@ -372,12 +386,6 @@
 						<a href="../modules/_index_.html#mediummotor" class="tsd-kind-icon">Medium<wbr>Motor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/_index_.html#motor" class="tsd-kind-icon">Motor</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/_index_.html#motorspeedsp" class="tsd-kind-icon">Motor<wbr>Speed<wbr>Sp</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#output_a" class="tsd-kind-icon">OUTPUT_<wbr>A</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
@@ -397,9 +405,6 @@
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#sensor" class="tsd-kind-icon">Sensor</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/_index_.html#servomotor" class="tsd-kind-icon">Servo<wbr>Motor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_index_.html#soundsensor" class="tsd-kind-icon">Sound<wbr>Sensor</a>
