--- a/modules/_index_.motor.html
+++ b/modules/_index_.motor.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;sensors&quot; | ev3dev-lang for Node.js</title>
+	<title>Motor | ev3dev-lang for Node.js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,10 +57,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_sensors_.html">&quot;sensors&quot;</a>
+					<a href="_index_.html">&quot;index&quot;</a>
+				</li>
+				<li>
+					<a href="_index_.motor.html">Motor</a>
 				</li>
 			</ul>
-			<h1>External module &quot;sensors&quot;</h1>
+			<h1>Module Motor</h1>
 		</div>
 	</div>
 </header>
@@ -71,22 +74,70 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-external">
-							<h3>Classes</h3>
+						<section class="tsd-index-section ">
+							<h3>Type aliases</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.colorsensor.html" class="tsd-kind-icon">Color<wbr>Sensor</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.gyrosensor.html" class="tsd-kind-icon">Gyro<wbr>Sensor</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.i2csensor.html" class="tsd-kind-icon">I2CSensor</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.infraredsensor.html" class="tsd-kind-icon">Infrared<wbr>Sensor</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.lightsensor.html" class="tsd-kind-icon">Light<wbr>Sensor</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.sensor.html" class="tsd-kind-icon">Sensor</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.sensorbase.html" class="tsd-kind-icon">Sensor<wbr>Base</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.soundsensor.html" class="tsd-kind-icon">Sound<wbr>Sensor</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.touchsensor.html" class="tsd-kind-icon">Touch<wbr>Sensor</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.ultrasonicsensor.html" class="tsd-kind-icon">Ultrasonic<wbr>Sensor</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_index_.motor.html#commandvalue" class="tsd-kind-icon">Command<wbr>Value</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_index_.motor.html#encoderpolarityvalue" class="tsd-kind-icon">Encoder<wbr>Polarity<wbr>Value</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_index_.motor.html#polarityvalue" class="tsd-kind-icon">Polarity<wbr>Value</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_index_.motor.html#statevalue" class="tsd-kind-icon">State<wbr>Value</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_index_.motor.html#stopactionvalue" class="tsd-kind-icon">Stop<wbr>Action<wbr>Value</a></li>
 							</ul>
 						</section>
 					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Type aliases</h2>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
+					<a name="commandvalue" class="tsd-anchor"></a>
+					<h3>Command<wbr>Value</h3>
+					<div class="tsd-signature tsd-kind-icon">Command<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">motors.Motor.CommandValue</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L39">index.ts:39</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
+					<a name="encoderpolarityvalue" class="tsd-anchor"></a>
+					<h3>Encoder<wbr>Polarity<wbr>Value</h3>
+					<div class="tsd-signature tsd-kind-icon">Encoder<wbr>Polarity<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">motors.Motor.EncoderPolarityValue</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L40">index.ts:40</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
+					<a name="polarityvalue" class="tsd-anchor"></a>
+					<h3>Polarity<wbr>Value</h3>
+					<div class="tsd-signature tsd-kind-icon">Polarity<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">motors.Motor.PolarityValue</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L41">index.ts:41</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
+					<a name="statevalue" class="tsd-anchor"></a>
+					<h3>State<wbr>Value</h3>
+					<div class="tsd-signature tsd-kind-icon">State<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">motors.Motor.StateValue</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L42">index.ts:42</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
+					<a name="stopactionvalue" class="tsd-anchor"></a>
+					<h3>Stop<wbr>Action<wbr>Value</h3>
+					<div class="tsd-signature tsd-kind-icon">Stop<wbr>Action<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">motors.Motor.StopActionValue</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/index.ts#L43">index.ts:43</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 		</div>
@@ -96,60 +147,24 @@
 					<li class="globals  ">
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
-					<li class="label tsd-is-external">
-						<span>Internals</span>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_index_.html">"index"</a>
-					</li>
-					<li class="label tsd-is-external">
-						<span>Externals</span>
-					</li>
-					<li class=" tsd-kind-external-module tsd-is-external">
-						<a href="_extras_.html">"extras"</a>
-					</li>
-					<li class=" tsd-kind-external-module tsd-is-external">
-						<a href="_io_.html">"io"</a>
-					</li>
-					<li class=" tsd-kind-external-module tsd-is-external">
-						<a href="_motors_.html">"motors"</a>
-					</li>
-					<li class="current tsd-kind-external-module tsd-is-external">
-						<a href="_sensors_.html">"sensors"</a>
-					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.colorsensor.html" class="tsd-kind-icon">Color<wbr>Sensor</a>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="_index_.motor.html#commandvalue" class="tsd-kind-icon">Command<wbr>Value</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.gyrosensor.html" class="tsd-kind-icon">Gyro<wbr>Sensor</a>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="_index_.motor.html#encoderpolarityvalue" class="tsd-kind-icon">Encoder<wbr>Polarity<wbr>Value</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.i2csensor.html" class="tsd-kind-icon">I2CSensor</a>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="_index_.motor.html#polarityvalue" class="tsd-kind-icon">Polarity<wbr>Value</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.infraredsensor.html" class="tsd-kind-icon">Infrared<wbr>Sensor</a>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="_index_.motor.html#statevalue" class="tsd-kind-icon">State<wbr>Value</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.lightsensor.html" class="tsd-kind-icon">Light<wbr>Sensor</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.sensor.html" class="tsd-kind-icon">Sensor</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.sensorbase.html" class="tsd-kind-icon">Sensor<wbr>Base</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.soundsensor.html" class="tsd-kind-icon">Sound<wbr>Sensor</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.touchsensor.html" class="tsd-kind-icon">Touch<wbr>Sensor</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_sensors_.ultrasonicsensor.html" class="tsd-kind-icon">Ultrasonic<wbr>Sensor</a>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="_index_.motor.html#stopactionvalue" class="tsd-kind-icon">Stop<wbr>Action<wbr>Value</a>
 					</li>
 				</ul>
 			</nav>
