--- a/modules/_io_.html
+++ b/modules/_io_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;io&quot; | ev3dev-lang for Node.JS</title>
+	<title>&quot;io&quot; | ev3dev-lang for Node.js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">ev3dev-lang for Node.JS</a>
+					<a href="../index.html" class="title">ev3dev-lang for Node.js</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -75,11 +75,32 @@
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_io_.device.html" class="tsd-kind-icon">Device</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported"><a href="../classes/_io_.eventnotificationrequest.html" class="tsd-kind-icon">Event<wbr>Notification<wbr>Request</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_io_.indexeddevice.html" class="tsd-kind-icon">Indexed<wbr>Device</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_io_.traceerror.html" class="tsd-kind-icon">Trace<wbr>Error</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported"><a href="../classes/_io_.xerror.html" class="tsd-kind-icon">XError</a></li>
 							</ul>
 						</section>
+						<section class="tsd-index-section tsd-is-external tsd-is-not-exported">
+							<h3>Variables</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported"><a href="_io_.html#promise" class="tsd-kind-icon">Promise</a></li>
+							</ul>
+						</section>
 					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-external tsd-is-not-exported">
+				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported">
+					<a name="promise" class="tsd-anchor"></a>
+					<h3>Promise</h3>
+					<div class="tsd-signature tsd-kind-icon">Promise<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">PromiseConstructor</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/b267a92/src/io.ts#L6">io.ts:6</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 		</div>
@@ -117,11 +138,20 @@
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_io_.device.html" class="tsd-kind-icon">Device</a>
 					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported">
+						<a href="../classes/_io_.eventnotificationrequest.html" class="tsd-kind-icon">Event<wbr>Notification<wbr>Request</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="../classes/_io_.indexeddevice.html" class="tsd-kind-icon">Indexed<wbr>Device</a>
+					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_io_.traceerror.html" class="tsd-kind-icon">Trace<wbr>Error</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported">
 						<a href="../classes/_io_.xerror.html" class="tsd-kind-icon">XError</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported">
+						<a href="_io_.html#promise" class="tsd-kind-icon">Promise</a>
 					</li>
 				</ul>
 			</nav>
