--- a/modules/_motors_.html
+++ b/modules/_motors_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;motors&quot; | ev3dev-lang for Node.JS</title>
+	<title>&quot;motors&quot; | ev3dev-lang for Node.js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">ev3dev-lang for Node.JS</a>
+					<a href="../index.html" class="title">ev3dev-lang for Node.js</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -74,12 +74,11 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_motors_.dcmotor.html" class="tsd-kind-icon">DCMotor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_motors_.dcmotor.html" class="tsd-kind-icon">Dc<wbr>Motor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_motors_.largemotor.html" class="tsd-kind-icon">Large<wbr>Motor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_motors_.mediummotor.html" class="tsd-kind-icon">Medium<wbr>Motor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_motors_.motor.html" class="tsd-kind-icon">Motor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_motors_.motorbase.html" class="tsd-kind-icon">Motor<wbr>Base</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_motors_.motorspeedsp.html" class="tsd-kind-icon">Motor<wbr>Speed<wbr>Sp</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_motors_.servomotor.html" class="tsd-kind-icon">Servo<wbr>Motor</a></li>
 							</ul>
 						</section>
@@ -119,7 +118,7 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_motors_.dcmotor.html" class="tsd-kind-icon">DCMotor</a>
+						<a href="../classes/_motors_.dcmotor.html" class="tsd-kind-icon">Dc<wbr>Motor</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_motors_.largemotor.html" class="tsd-kind-icon">Large<wbr>Motor</a>
@@ -132,9 +131,6 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_motors_.motorbase.html" class="tsd-kind-icon">Motor<wbr>Base</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_motors_.motorspeedsp.html" class="tsd-kind-icon">Motor<wbr>Speed<wbr>Sp</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_motors_.servomotor.html" class="tsd-kind-icon">Servo<wbr>Motor</a>
